<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings1"
        android:title="@string/action_settings1"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings2"
        android:title="@string/action_settings2"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings4"
        android:title="@string/action_settings4"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings6"
        android:title="@string/action_settings6"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings8"
        android:title="@string/action_settings8"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--<item android:id="@+id/action_settings7"-->
        <!--android:title="@string/action_settings7"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <!--<item android:id="@+id/action_settings3"-->
        <!--android:title="@string/action_settings3"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <item android:id="@+id/action_settings9"
        android:title="@string/action_settings9"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings5"
        android:title="@string/action_settings5"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings10"
        android:title="@string/action_settings11"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>