<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="16dp">
        <TextView
            android:text="@string/is_your_school"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_content"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_region"/>
            <TextView
                android:id="@+id/txt_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="xxxxxxx"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_council"/>
            <TextView
                android:id="@+id/txt_council"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="xxxxxxx"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_ward"/>
            <TextView
                android:id="@+id/txt_ward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="xxxxxxx"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_emis"/>
            <TextView
                android:id="@+id/txt_emis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="xxxxxxx"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_school"/>
            <TextView
                android:id="@+id/txt_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="xxxxxxx"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <CheckBox
                android:id="@+id/chk_review_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/txt_is_information_correct"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@android:color/darker_gray">
        <TextView
            android:id="@+id/btn_no"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/str_g_no"/>
        <View
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/btn_yes"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/str_g_yes"/>
    </LinearLayout>
</LinearLayout>