<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.sergio.sistz.main_v3">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/tzColorGrey"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/sis_logo_white"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/btn_daily_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/wallet_holo_blue_light"
        fab:menu_colorPressed="@color/wallet_holo_blue_light"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_plus_sign"
        fab:menu_labels_colorNormal="@color/tzColorGreyDark"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="10dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="18dp"
        fab:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_60_teacher"
            fab:fab_label="@string/str_teacher_attendance"
            fab:fab_colorPressed="@color/tzColorGreenDark"
            fab:fab_colorNormal="@color/tzColorGreenLight"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_attendance"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/icon_60_att"
            fab:fab_colorNormal="@color/tzColorGreenLight"
            fab:fab_colorPressed="@color/tzColorGreenDark"
            fab:fab_label="@string/str_student_attendance" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_60_eval"
            fab:fab_label="@string/str_m_tv9"
            fab:fab_colorPressed="@color/tzColorGreenDark"
            fab:fab_colorNormal="@color/tzColorGreenLight"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/btn_behaviour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_60_beha"
            fab:fab_label="@string/str_m_tv8"
            fab:fab_colorPressed="@color/tzColorGreenDark"
            fab:fab_colorNormal="@color/tzColorGreenLight"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>